# ChatDir

./: .gitattributes  00-chunkers-intro.ipynb  Notes.md  README.md  pyproject.toml  requirements.txt  setup.py
chatdir/: cli.py
chatdir/core/: chat.py  file_handler.py  llm_api.py  llm_local.py  vector_db.py
chatdir/utils/: config.py  logger.py
tests/: test_llm_api.py
